# django-modeling

./: README.md  db.sqlite3  pyproject.toml
apps/course/: admin.py  models.py
apps/course/migrations/: 0001_initial.py
apps/member/: admin.py  models.py
apps/member/migrations/: 0001_initial.py  0002_auto_20211212_1131.py  0003_initial.py
apps/pizza/: admin.py  apps.py  models-2.py  models.py
apps/pizza/migrations/: 0001_initial.py
apps/shop/: models.py
apps/shop/migrations/: 0001_initial.py  0002_alter_cart_books.py
apps/sports/: apps.py  models.py
core/: settings.py
